--- a/digital-planner-app/index.html
+++ b/digital-planner-app/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="description"
+      content="A clean, modern digital planner for tracking tasks, journals, goals, habits, and calendar events."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#f4f4f9" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>Digital Planner App</title>
   </head>
   <body>
     <div id="root"></div>
